<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:title="@string/system_informatin">

    <PreferenceCategory
        android:title="@string/device_info_hardware">
        <Preference
            android:key="device_info_vendor"
            android:title="@string/device_info_vendor">
        </Preference>

        <Preference
            android:key="device_info_model"
            android:title="@string/device_info_model">
        </Preference>

        <Preference
            android:key="device_info_uniqueCode"
            android:title="@string/device_info_uniqueCode">
        </Preference>

        <Preference
            android:key="device_info_hardware_ver"
            android:title="@string/device_info_hardware_ver">
        </Preference>

        <Preference
            android:key="device_info_kernel_ver"
            android:title="@string/device_info_kernel_ver">
        </Preference>

        <Preference
            android:key="device_info_rom_ver"
            android:title="@string/device_info_rom_ver">
        </Preference>

        <Preference
            android:key="device_info_firmware_ver"
            android:title="@string/device_info_firmware_ver">
        </Preference>

        <Preference
            android:key="device_info_secure_firmware_ver"
            android:title="@string/device_info_secure_firmware_ver">
        </Preference>

        <Preference
            android:key="device_info_ksn"
            android:title="@string/device_info_ksn">
        </Preference>

        <Preference
            android:key="device_info_imsi"
            android:title="@string/device_info_imsi">
        </Preference>

        <Preference
            android:key="device_info_imer"
            android:title="@string/device_info_imer">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/software_info_software">

        <Preference
            android:key="software_info_android_version"
            android:title="@string/software_info_android_version">
        </Preference>

        <!--<Preference
            android:key="software_info_lkl_version"
            android:title="@string/software_info_lkl_version">
        </Preference>

        <Preference
            android:key="software_info_lkl_to_android_version"
            android:title="@string/software_info_lkl_to_android_version">
        </Preference>-->

        <Preference
            android:key="software_info_app_version"
            android:title="@string/software_info_app_version">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_info">
        <Preference
            android:key="other_info_save_path"
            android:title="@string/other_info_save_path">
        </Preference>

        <Preference
            android:key="other_info_sim_iccId"
            android:title="@string/other_info_sim_iccId">
        </Preference>

        <Preference
            android:key="other_info_silent_install_app"
            android:title="@string/other_info_silent_install_app">
        </Preference>

        <Preference
            android:key="other_info_set_apn"
            android:title="@string/other_info_set_apn">
        </Preference>

        <Preference
            android:key="other_info_update_system_time"
            android:title="@string/other_info_update_system_time">
        </Preference>

        <Preference
            android:key="other_info_firmware_upgrade"
            android:title="@string/other_info_firmware_upgrade">
        </Preference>

        <Preference
            android:key="other_info_firmware_update"
            android:title="@string/other_info_firmware_update">
        </Preference>

        <Preference
            android:key="other_info_firmware_update_status"
            android:title="@string/other_info_firmware_update_status">
        </Preference>

        <Preference
            android:key="other_info_reboot"
            android:title="@string/other_info_reboot">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
