<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_trad_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height">

        <Button
            android:id="@+id/trad_para_cancle"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/drawable_button"
            android:text="@string/trad_para_cancle"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/trad_para_save"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/drawable_button"
            android:text="@string/trad_para_save"
            android:onClick="onClick"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/btn_background"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/trad_is_no_pin"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <Switch
                android:id="@+id/switch_no_pin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/trad_no_pin_max_amount"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <EditText
                android:id="@+id/max_amount_no_pin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:numeric="integer"
                android:maxLength="13" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn_background"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/trad_is_no_sign"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <Switch
            android:id="@+id/switch_no_sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical" />
    </RelativeLayout>
</LinearLayout>
